<resources>
    <string name="app_name">Discount  Hunt</string>

    <!-- Strings related to login -->
    <string name="password">Password</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="signout">Sign Out</string>
    <string name="save">Save</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_session">Oops! Error with signing in.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="profile_photo">Profile Photo</string>
    <string name="title_activity_signup">Discount Hunt</string>
    <string name="title_activity_signin">Discount Hunt</string>
    <string name="title_activity_map">Map</string>
    <string name="signal_logo">Signal Logo</string>
    <string name="friends_photo">Friend\'s Photo</string>
    <string name="rank">Rank:</string>
    <string name="discounts_found">Discounts Found</string>
    <string name="title_activity_discounts_list">DiscountsListActivity</string>
    <string name="showing">Showing</string>
    <string name="in">in</string>
    <string name="radius">radius</string>
    <string name="discounts">discounts</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="show_map">Show Map</string>
    <string name="cart_graphic">Cart Graphic</string>
    <string name="show_discounts_list">Show Discounts List</string>
    <string name="add_friend">Add Friend</string>
    <string name="discount_hunt">Discount Hunt</string>
    <string name="title">Title</string>
    <string name="take_photo">Take Photo</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="friendship_created">You have successfully made friends!</string>
    <string name="create_discount">Create Discount</string>
    <array name="categories">
        <item>Clothes</item>
        <item>Shoes</item>
        <item>Jewelery</item>
        <item>Electronics</item>
        <item>Other</item>
    </array>
    <string name="error_create_discount">Oops! We could not create your discount.</string>
    <string name="search">Search</string>
    <string name="discount_photo">Discount Photo</string>
    <string name="vote_up">Vote Up</string>
    <string name="vote_down">Vote Down</string>
    <string name="author">Author</string>
    <string name="author_photo">Author\'s Photo</string>
    <string name="votes">Votes:</string>
    <string name="search_radius">Search Radius</string>
    <string name="enable_background_process">Enable Background Process</string>
    <string name="settings">Settings</string>
    <string name="save_settings">Save Settings</string>
    <string name="friends_rankings">Friends Rankings</string>
    <string name="background_service_started">Service started.</string>
    <string name="background_service_stopped">Service stopped.</string>
    <string name="background_service_label">Discount Hunt Background Process</string>
</resources>
