<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/show_discounts_list"
        android:title="@string/show_discounts_list"
        android:titleCondensed="@string/show_discounts_list"
        android:orderInCategory="1" />

    <item android:id="@+id/show_add_friend"
        android:title="@string/add_friend"
        android:titleCondensed="@string/add_friend"
        android:orderInCategory="2" />

    <item android:id="@+id/show_friends_ranking"
        android:title="@string/friends_rankings"
        android:titleCondensed="@string/friends_rankings"
        android:orderInCategory="3" />

    <item android:id="@+id/show_setting"
        android:title="@string/settings"
        android:titleCondensed="@string/settings"
        android:orderInCategory="4" />
</menu>
