<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rs.elfak.mosis.marko.discounthunt.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/discount_hunt"
        android:layout_above="@id/shopping_cart"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:id="@+id/shopping_cart"
        android:background="@drawable/shopping_cart"
        android:contentDescription="@string/cart_graphic"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:id="@+id/signin"
        android:layout_below="@id/shopping_cart"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:layout_centerInParent="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_map"
        android:id="@+id/show_map"
        android:layout_below="@id/shopping_cart"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>
