<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rs.elfak.mosis.marko.discounthunt.CreateDiscountActivity">

    <ImageButton
        android:layout_width="280dp"
        android:layout_height="210dp"
        android:id="@+id/take_photo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/discount_photo"
        android:layout_margin="10dp"
        android:contentDescription="@string/take_photo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_below="@+id/take_photo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/description"
        android:layout_below="@+id/title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:lines="2"
        android:hint="@string/description" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/price"
            android:hint="@string/price"
            android:layout_gravity="left"
            android:layout_weight="1" />

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/category"
            android:layout_weight="1"
            android:spinnerMode="dialog"
            android:layout_gravity="left" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_discount"
        android:id="@+id/create_discount"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_marginTop="10dp" />

</RelativeLayout>
