<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DiscountDetailActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:id="@+id/photo"
                android:background="@drawable/discount_photo"
                android:contentDescription="@string/discount_photo"
                android:layout_margin="0dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/title"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/textView2"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:id="@+id/votes"
                        android:layout_gravity="center_vertical"
                        android:contextClickable="false"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp" />

                    <ImageButton
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/vote_up"
                        android:contentDescription="@string/vote_up"
                        android:background="@drawable/ic_thumb_up_black_48dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="2dp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/price"
                    android:layout_marginBottom="10dp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/description"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:freezesText="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/author"
            android:id="@+id/textView" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/author">

            <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/author_photo"
                android:layout_margin="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/profile_photo"
                android:contentDescription="@string/author_photo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/author_name"
                android:layout_gravity="center_vertical" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
